fix: 저장된 dailyPlan 리스트 접근 전 isEmpty() 체크 추가